<resources>
    <string name="app_name">Catarro1</string>

    <string name="action_settings">Settings</string>
    <string name="nuevo_paciente">Nuevo paciente</string>
    <string name="title_activity_nueva_persona">NuevaPersona</string>

    <string name="hello_world">Hello world!</string>
    <string name="etNombrePersona">Nombre</string>
    <string name="fechaNacimiento">Fecha Nacimiento</string>
    <string name="textLabelNombre">Nombre:</string>
    <string name="textLabelFechaNac">Fecha nacimiento:</string>
    <string name="action_guardar">guardar</string>
    <string name="action_cancelar">cancelar</string>
    <string name="action_nuevaPersona">action_nuevaPersona</string>
    <string name="title_activity_persona">Persona</string>
    <string name="edad" />
    <string name="labelPeso">Peso:</string>
    <string name="labelNobre">Nombre:</string>
    <string name="etPeso">0</string>
    <string name="etPeso2">0</string>
    <string name="pesoPersona">0</string>
    <string name="etPesoPersona">0</string>
    <string name="labelKg">Kg</string>
    <string name="action_nuevoCatarro">nuevoCatarro</string>
    <string name="actionBar_modificarPersona">Modificar persona</string>
    <string name="action_eliminarPersona">Eliminar persona</string>
    <string name="message_dialog_eliminar_persona">¿Eliminar persona?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_actividad_nuevo_catarro">ActividadNuevoCatarro</string>
    <string name="nuevo_catarro">Nuevo catarro</string>
    <string name="lbNombreCatarro">Descripción</string>
    <string name="etNombreCatarro">descripción</string>
    <string name="lbFechaCatarro">Fecha:</string>
    <string name="etFechaCatarro">01/01/2000</string>
    <string name="labelComentarioCatarro">Comentarios:</string>
    <string name="multiLineComentarios">comentarios</string>
    <string name="listViewCatarrosText">Catarros</string>
    <string name="lbCatarrosAnteriores">Catarros anteriores</string>
    <string name="title_activity_actividad_catarro">ActividadCatarro</string>
    <string name="lbSintomas">Sintomas</string>
    <string name="lbTomas">Tomas</string>
    <string name="actionBar_modificarCatarro">modificar</string>
    <string name="action_eliminarCatarro">Eliminar Catarro</string>
    <string name="action_nuevoSintoma">Nuevo sintoma</string>
    <string name="action_nuevaToma">Nueva toma</string>
    <string name="message_dialog_eliminar_catarro">¿Eliminar catarro?</string>
    <string name="lbModificarCatarro">Modificar catarro</string>
    <string name="title_activity_actividad_nuevo_sintoma">ActividadNuevoSintoma</string>
    <string name="lbNuevoSintoma">Nuevo Sintoma</string>
    <string name="lbNombreSintoma">Nombre</string>
    <string name="lbFechaSintoma">Fecha</string>
    <string name="etFechaSintoma">01 may 2015</string>
    <string name="lbValorSintoma">Valor</string>
    <string name="etValor">38.5</string>
    <string name="etUnidadesValor">º</string>
    <string name="etHoraSintoma">18:35</string>
    <string name="lbModificarSintoma">Modificar Sintoma</string>
    <string name="etNombreSintoma">Nombre sintoma</string>
    <string name="title_activity_actividad_prescripcion">ActividadPrescripcion</string>
    <string name="etNombreMedicamento">Nombre medicamento</string>
    <string name="etPosologiatoma">5.25</string>
    <string name="etPosologiakg">33.6</string>
    <string name="por_kg">por Kg</string>
    <string name="cadaToma">cada toma</string>
    <string name="aldia">al dia</string>
    <string name="lbadministar">Administrar</string>
    <string name="numVecesDia">3</string>
    <string name="lbVecesAlDia">veces al dia (0.15 ml x kg, 4.8 ml para 18kg)</string>
    <string name="numDias">7</string>
    <string name="lbNumDias">días (21 tomas)</string>
</resources>
