<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sebas.catarro1.ActividadNuevaPersona">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nuevo_paciente"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/etNombrePersona"
        android:ems="10"
        android:id="@+id/etNombrePersona"
        android:layout_alignTop="@+id/labelNombre"
        android:layout_toRightOf="@+id/labelNombre"
        android:layout_toEndOf="@+id/labelNombre" />

    <TextView
        android:text="@string/fechaNacimiento"
        android:id="@+id/fechaNacDatePicker"
        style="?android:attr/spinnerItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ellipsize="end"
        android:onClick="mostrarDialogoElegirFecha"
        android:textSize="18sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/labelFechaNacimiento"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelNombre"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:text="@string/labelNobre"
        android:editable="false"
        android:enabled="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelFechaNacimiento"
        android:editable="false"
        android:text="@string/textLabelFechaNac"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelPeso"
        android:layout_below="@+id/etNombrePersona"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:text="@string/labelPeso"
        android:editable="false"
        android:enabled="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etPeso"
        android:layout_alignTop="@+id/labelPeso"
        android:layout_alignLeft="@+id/etNombrePersona"
        android:layout_alignStart="@+id/etNombrePersona"
        android:text="@string/etPeso" />

</RelativeLayout>
