<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sebas.catarro1.sintoma.ActividadNuevoSintoma">

    <TextView android:text="@string/lbNuevoSintoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/lbNuevoSintoma" />

    <TextView
        android:id="@+id/lbNombreSintoma"
        android:text="@string/lbNombreSintoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbNuevoSintoma"
        android:editable="false"
        android:enabled="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <EditText
        android:id="@+id/etNombreSintoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignBottom="@+id/lbNombreSintoma"
        android:layout_toRightOf="@+id/lbNombreSintoma"
        android:layout_toEndOf="@+id/lbNombreSintoma"
        android:layout_marginLeft="24dp"
        />





    <TextView
        android:id="@+id/lbValorSintoma"
        android:text="@string/lbValorSintoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:editable="false"
        android:enabled="false"
        android:layout_below="@+id/lbNombreSintoma"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <EditText
        android:id="@+id/etValor"
        android:text="@string/etValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_alignBottom="@+id/lbValorSintoma"
        android:layout_alignLeft="@+id/etNombreSintoma"
        android:layout_alignStart="@+id/etNombreSintoma" />

    <EditText
        android:id="@+id/etUnidadesValor"
        android:text="@string/etUnidadesValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_alignBottom="@+id/etValor"
        android:layout_alignLeft="@+id/etValor"
        android:layout_alignStart="@+id/etValor"
        android:layout_marginLeft="24dp"
        />




    <TextView
        android:id="@+id/lbFechaSintoma"
        android:text="@string/lbFechaSintoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:editable="false"
        android:enabled="false"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/lbValorSintoma"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/datePickerFechaSintoma"
        android:text="@string/etFechaSintoma"
        style="?android:attr/spinnerItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:ellipsize="end"
        android:onClick="mostrarDialogoElegirFecha"
        android:singleLine="true"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/lbFechaSintoma"
        android:layout_alignLeft="@+id/etNombreSintoma"
        android:layout_alignStart="@+id/etNombreSintoma" />

    <TextView
        android:id="@+id/labelComentarioCatarro"
        android:text="@string/labelComentarioCatarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lbFechaSintoma"
        android:layout_marginTop="36dp"
        android:editable="false"
        android:enabled="false"
        />

    <EditText
        android:id="@+id/multiLineComentarios"
        android:text="@string/multiLineComentarios"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/labelComentarioCatarro"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minLines="6"
        android:scrollbars="vertical"

        android:textAlignment="viewStart"
        android:gravity="start"
        android:focusable="true" />


</RelativeLayout>
