<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sebas.catarro1.persona.ActividadPersona">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:id="@+id/etNombrePersonaEdad"
            android:layout_alignBottom="@+id/etPesoPersona"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="2"
            android:id="@+id/etPesoPersona"
            android:text="@string/etPesoPersona"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="29dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/etNombrePersonaEdad"
            android:layout_toEndOf="@+id/etNombrePersonaEdad"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:ellipsize="end"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvKg"
            android:layout_alignBottom="@+id/linearLayout1"
            android:layout_toRightOf="@+id/linearLayout1"
            android:layout_toEndOf="@+id/linearLayout1"
            android:text="@string/labelKg" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        >


        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewCatarros"
            android:choiceMode="singleChoice"
            android:text="@string/listViewCatarrosText"
            />
    </LinearLayout>

</RelativeLayout>
