<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sebas.catarro1.prescripcion.ActividadPrescripcion">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_below="@id/linearLayout1"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/iconoPocion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"

            android:src="@mipmap/ic_pocion_icono" />


        <EditText
            android:id="@+id/etNombreMedicamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/etNombreMedicamento" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/linearLayout1"
        android:layout_marginTop="30dp"
        android:background="#1954f5ff"

        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_reloj" />

        <LinearLayout
            android:id="@+id/linearLayout20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3454f5ff"

            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout21"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:background="#3454f5ff"
                android:orientation="horizontal">

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/cantidadxtoma"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:onClick="onRadioButtonClicked" />


                    <EditText
                        android:id="@+id/posologiatoma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:ems="2"
                        android:inputType="numberDecimal"
                        android:text="@string/etPosologiatoma"

                        android:textSize="15dp" />

                    <Spinner
                        android:id="@+id/unidadesxtoma_spinner"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown" />

                    <RadioButton
                        android:id="@+id/cantidadxkg"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:onClick="onRadioButtonClicked" />

                    <EditText
                        android:id="@+id/posologiakg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:ems="2"
                        android:inputType="numberDecimal"
                        android:text="@string/etPosologiakg"

                        android:textSize="15dp" />

                    <Spinner
                        android:id="@+id/unidadesxkg_spinner"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/por_kg" />
                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout22"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@id/linearLayout21"
                android:layout_weight="1"

                android:background="#3563ffa4"
                android:orientation="horizontal">

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/xtoma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked" />


                    <TextView
                        android:id="@+id/tvcadaToma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/cadaToma" />

                    <RadioButton
                        android:id="@+id/aldia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked" />

                    <TextView
                        android:id="@+id/tvaldia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/aldia" />
                </RadioGroup>


            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/linearLayout2"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_pipeta"
            />

        <EditText
            android:id="@+id/numVecesDia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="1"
            android:inputType="number"
            android:text="@string/numVecesDia"

            android:textSize="15dp" />

        <TextView
            android:id="@+id/lbVecesAlDia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"

            android:text="@string/lbVecesAlDia" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/linearLayout3"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_calendar"
            />

        <EditText
            android:id="@+id/numDias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="1"
            android:inputType="number"
            android:text="@string/numDias"

            android:textSize="15dp" />

        <TextView
            android:id="@+id/lbNumDias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"

            android:text="@string/lbNumDias" />



    </LinearLayout>
</RelativeLayout>
